--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "gulp-sass": "^3.2.1",
     "gulp-tap": "^1.0.1",
     "gulp-uglify": "^3.0.1",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-zip": "^4.1.0",
     "handlebars-layouts": "^3.1.4",
+    "i": "^0.3.6",
     "jquery": "^3.4.1",
+    "npm": "^6.14.4",
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
