--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i": "^0.3.6",
     "jquery": "^3.4.1",
     "npm": "^6.14.4",
+    "sparkpost": "^2.1.4",
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
