--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,4 @@
-# sample netlify.toml
 [build]
   command = "gulp build"
-  functions = "functions" # netlify dev uses this to know where to scaffold and serve your functions
+  functions = "functions"
   publish = "dist/"
-
-# note: each of these fields are OPTIONAL
-[dev]
-  command = "npm start" # Command to start your dev server
-  port = 3000 # Port that the dev server will be listening on
-  functionsPort = 34567 # port for functions server
-  targetPort = 3000 # Port of target app server
-  publish = "dist" # If you use a _redirect file, provide the path to your static content folder
-  jwtRolePath = "app_metadata.authorization.roles" # Object path we should look for role values for JWT based redirects
-  autoLaunch = true # a Boolean value that determines if Netlify Dev launches the local server address in your browser
